--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,9 +50,9 @@ h1,h2 {
 	border: transparent;
 	border-radius: 5px;
 	cursor: pointer;
-	background: radial-gradient(closest-side, purple, black);
+	background: radial-gradient(closest-side, lightblue, black);
 
-	font-family: "Georgia", serif; 
+	font-family: "Comic Sans MS", cursive, sans-serif; 
 }
 
 #blackLayer { /* the black layer */
